feat: Changed icons, and css and added logo

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/svg" href="./src/assets/LogoIcon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GameSwapStation</title>
+    <title>GameSwapHub</title>
   </head>
   <body>
     <div id="root"></div>
